# docs/swagger.json
@@ -739,6 +739,39 @@
                 }
             }
         },
+        "/api/v1/pps/appropriate-diagnosis": {
+            "get": {
+                "description": "Percentage = count of \"yes\" responses divided by total responses (yes/no) from indications.reason_in_notes",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pps-calculations"
+                ],
+                "summary": "Get appropriate diagnosis percentage",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/pps/aware-categorization": {
             "get": {
                 "description": "Calculate the distribution of antibiotics based on WHO AWaRe classification (Access, Watch, Reserve, Unclassified)",
